IDEA-386984 [java]: cleanup
GitOrigin-RevId: 7597658f30090910fea8e4733a00bd6f88b3866b